# Nexus-Inference-Engine-

./: .gitignore  NEXUS_Implementation_Plan.md  README.md  TechnicalDocumentation.md
models/: vocab.txt
nexus/: CMakeLists.txt
nexus/research/: 01_nxf_format.md  02_metal_kernels.md  03_compression_stack.md  04_current_architecture.md
nexus/shaders/: activations.metal  attention_gpu.metal  batched_expert_gemv.metal  flash_attention.metal  fused_ffn_int4.metal  fused_multihead_attention.metal  fused_qkv_int4.metal  gemm_dequant.metal  gemv_int4_fast.metal  gemv_int4_nr8.metal  gemv_int4_uniform.metal  gemv_q3k.metal  layer_fused.metal  rmsnorm.metal  turbo_quant.metal
nexus/src/api/: bench_cli.cpp  benchmark.cpp  benchmark.h  cli.cpp  http_server.cpp  http_server.h  serve_cli.cpp
nexus/src/compute/: compute_dispatch.cpp  compute_dispatch.h  graph_executor.cpp  graph_executor.h
nexus/src/compute/accelerate/: gemm.cpp  gemm.h
nexus/src/compute/coreml/: draft_model.h  draft_model.mm
nexus/src/compute/cpu/: dequant_neon.cpp  dequant_neon.h
nexus/src/compute/metal/: metal_backend.h  metal_backend.mm  metal_context.h  metal_context.mm  metal_context_impl.h
nexus/src/core/: config.h  engine.cpp  engine.h  scheduler.cpp  scheduler.h  tokenizer.cpp  tokenizer.h
nexus/src/format/: nxf.h  nxf_reader.cpp  nxf_writer.cpp
nexus/src/import/: convert_cli.cpp  gguf_importer.cpp  gguf_importer.h  safetensors_importer.cpp  safetensors_importer.h  vocab_extractor.cpp  vocab_extractor.h
nexus/src/kv/: eviction.cpp  eviction.h  kv_quantize.cpp  kv_quantize.h  kv_store.cpp  kv_store.h  paged_attention.cpp  paged_attention.h  prefix_cache.cpp  prefix_cache.h  turbo_quant.cpp  turbo_quant.h
nexus/src/memory/: memory_manager.cpp  memory_manager.h  prefetcher.cpp  prefetcher.h  uma_allocator.cpp  uma_allocator.h
nexus/src/model/: hybrid_model.cpp  hybrid_model.h  moe_layer.cpp  moe_layer.h  moe_router.cpp  moe_router.h  sparse_predictor.h  speculative.cpp  speculative.h  transformer.cpp  transformer.h
nexus/src/quant/: awq.cpp  awq.h  entropy.cpp  entropy.h  gptq.cpp  gptq.h  quip_sharp.cpp  quip_sharp.h
nexus/tests/: test_memory_manager.cpp  test_nxf_format.cpp
nexus/tools/: benchmark.py
